# dojo

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  OVERVIEW.md  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
books/: README.md
books/fiction/: README.md  asimov-foundation.md  stephenson-baroque-cycle.md  stephenson-cryptonomicon.md  stephenson-snow-crash.md
books/non-fiction/: README.md  ammous-bitcoin-standard.md  davidson-sovereign-individual.md  fergusson-when-money-dies.md  gertner-idea-factory.md  hancock-supernatural.md  hofstadter-godel-escher-bach.md  kjv-holy-bible.md  mandelbrot-misbehavior-of-markets.md  mcgilchrist-master-and-his-emissary.md  mises-human-action.md  peterson-maps-of-meaning.md  poundstone-fortunes-formula.md  smith-wealth-of-nations.md  soni-goodman-a-mind-at-play.md  strauss-howe-fourth-turning.md  taleb-antifragile.md  von-neumann-morgenstern-theory-of-games.md
docs/: overview.md
docs/reference/: ssh-github-setup.md
docs/research/: ai.md  defi.md  index.md  macro-game.md  math.md  quant.md  strategy.md
leetcode/: conftest.py  utils.py
leetcode/pattern/array_hashing/p0001_two_sum/: solution.py  test_solution.py
leetcode/pattern/array_hashing/p0049_group_anagrams/: solution.py  test_solution.py
leetcode/pattern/array_hashing/p0128_longest_consecutive_sequence/: solution.py  test_solution.py
leetcode/pattern/array_hashing/p0217_contains_duplicate/: solution.py  test_solution.py
reference/: ssh-github-setup.md
research/: README.md
research/ai/: README.md  ml-foundational-concepts.md
research/defi/: README.md  bitcoin-monetary-mechanics.md  constant-product-amms.md
research/game-theory/: README.md  foundations.md
research/macro-economics/: README.md
research/math/: README.md
research/poker/: README.md  foundations.md
research/quantitative-analysis/: README.md
research/strategy-development/: README.md
scripts/: gen_books.py  gen_leetcode.py  gen_research.py  gen_writing.py
writing/: README.md
writing/articles/: README.md  stop-prompting-start-governing.md
(+28 files in other folders)
