[project]
name = "dojo"
version = "0.1.0"
description = "One-year quantitative finance & software engineering learning log"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.8",
    "jupytext>=1.19.1",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocs-include-markdown-plugin>=6.2.0",
]

[tool.pytest.ini_options]
testpaths = ["leetcode"]
pythonpath = ["."]
